// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not change capitalization 1`] = `".c1wvjxbo{--backgroundColor:red}"`;

exports[`does not change capitalization 2`] = `
"import style9 from 'style9';
const styles = {
  default: {
    \\"--backgroundColor\\": \\"c1wvjxbo\\"
  }
};
\\"c1wvjxbo \\";"
`;

exports[`does not convert number 1`] = `".c1tldmpg{--opacity:1}"`;

exports[`does not convert number 2`] = `
"import style9 from 'style9';
const styles = {
  default: {
    \\"--opacity\\": \\"c1tldmpg\\"
  }
};
\\"c1tldmpg \\";"
`;
